Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105192

Loader3D crashes when active property is dynamically changed

    XMLWordPrintable

Details

    • de0a6cc471 (qt/qtdeclarative/dev) de0a6cc471 (qt/tqtc-qtdeclarative/dev) ff02a7a294 (qt/qtdeclarative/6.4) ff02a7a294 (qt/tqtc-qtdeclarative/6.4) 2f46f072f0 (qt/tqtc-qtdeclarative/6.2)
    • 2022 Qt Quick 3D: Week 39-40

    Description

      Loader3D crashes when active property is dynamically changed.

      Please refer to the attached test application.

      main.qml crashes but main2.qml is fine.

       

      Only difference between main.qml and main2.qml is materials in

      sourceComponent of Loader3D

       

      back trace

                                                                                             
                                                                                             
      1  QQuickWindowPrivate::polishItems      qquickwindow.cpp          358  0x7fffe98a26f7 
      2  QSGThreadedRenderLoop::polishAndSync  qsgthreadedrenderloop.cpp 1556 0x7fffe9a6761e 
      3  QQuickWindow::event                   qquickwindow.cpp          1523 0x7fffe98a4b12 
      4  QCoreApplication::notifyInternal2     qthread_p.h               337  0x7ffff6b7894a 
      5  QPlatformWindow::deliverUpdateRequest qplatformwindow.cpp       774  0x7ffff7817d45 
      6  QPlatformWindow::windowEvent          qplatformwindow.cpp       454  0x7ffff7817d45 
      7  QGuiApplication::notify               qguiapplication.cpp       1921 0x7ffff77dd2e3 
      8  QCoreApplication::notifyInternal2     qthread_p.h               337  0x7ffff6b7894a 
      9  QTimerInfoList::activateTimers        qtimerinfo_unix.cpp       610  0x7ffff6d07edb 
      10 timerSourceDispatch                   qeventdispatcher_glib.cpp 149  0x7ffff6e1ed04 
      11 g_main_context_dispatch                                              0x7ffff63bb17d 
      12 ??                                                                   0x7ffff63bb400 
      13 g_main_context_iteration                                             0x7ffff63bb4a3 
      14 QEventDispatcherGlib::processEvents   qeventdispatcher_glib.cpp 393  0x7ffff6e1f04a 
      15 QEventLoop::exec                      qflags.h                  108  0x7ffff6b8440b 
      16 QCoreApplication::exec                qflags.h                  74   0x7ffff6b807ee 
      17 main                                  main.cpp                  66   0x55555555561b 
       

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-105192
          # Subject Branch Project Status CR V

          Activity

            People

              tuliniemi Jere Tuliniemi
              seokhako Seokha Ko
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes